Avoid using deprecated URL constructor